fix loading z-index

--- a/css/loading.css
+++ b/css/loading.css
@@ -13,7 +13,7 @@
   padding: 0;
   transform: translateZ(0);
   background-color: forestgreen;
-  z-index: 11;
+  z-index: 21;
 }
 
 svg {
